Basic BLOB/CLOB support
Improved support for "allowed interfaces" when constructing DTOs
Add SQLite/Postgres-specific test instructions